google form for contact us

--- a/index.html
+++ b/index.html
@@ -1234,22 +1234,15 @@
                         <div class="freebirdFormviewerViewFormCard">
                            <div class="freebirdFormviewerViewAccentBanner freebirdAccentBackground"></div>
                            <div class="freebirdFormviewerViewFormContent ">
+                              <!-- Name -->
                               <div class=freebirdFormviewerViewItemList role="list">
                                  <div role="listitem" class="freebirdFormviewerViewItemsItemItem freebirdFormviewerViewItemsTextTextItem" jsname="ibnC6b" jscontroller="rDGJeb"jsaction="sPvj8e:e4JwSe,vwKRrd;"data-required="true"data-item-id="944702798">
-                                    <div class="freebirdFormviewerViewItemsItemItemHeader">
-                                       <div class="freebirdFormviewerViewItemsItemItemTitleContainer">
-                                          <div class="freebirdFormviewerViewItemsItemItemTitle" dir="auto"role="heading" aria-level="2" aria-describedby="i.desc.944702798"> <span class="freebirdFormviewerViewItemsItemRequiredAsterisk" aria-hidden="true">* Required</span>
-                                          </div>
-                                          <div class="freebirdFormviewerViewItemsItemItemHelpText" id="i.desc.944702798" dir="auto">
-                                          </div>
-                                       </div>
-                                    </div>
                                     <div class="freebirdFormviewerViewItemsTextItemWrapper">
                                        <div class="quantumWizTextinputPaperinputEl freebirdFormviewerViewItemsTextShortText freebirdThemedInput" jscontroller="pxq3x" jsaction="clickonly:KjsqPd; focus:Jt1EX; blur:fpfTEe; input:Lg5SV;" jsshadow jsname="W85ice">
                                           <div class="quantumWizTextinputPaperinputMainContent exportContent">
                                              <div class="quantumWizTextinputPaperinputContentArea">
                                                 <div class="quantumWizTextinputPaperinputInputArea">
-                                                   <input type="text" class="quantumWizTextinputPaperinputInput exportInput" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-label="Name" aria-describedby="i.desc.944702798 i.err.944702798" name="entry.144511022" value="" required dir="auto" data-initial-dir="auto" data-initial-value="" />
+                                                   <input type="text" class="quantumWizTextinputPaperinputInput exportInput exportInput form-control input-field" placeholder="Name" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-label="Name" aria-describedby="i.desc.944702798 i.err.944702798" name="entry.144511022" value="" required dir="auto" data-initial-dir="auto" data-initial-value="" />
 
                                                 </div>
                                                 <div class="quantumWizTextinputPaperinputUnderline exportUnderline"></div>
@@ -1267,21 +1260,14 @@
                                     <div jsname="XbIQze" class="freebirdFormviewerViewItemsItemErrorMessage" id="i.err.944702798" role="alert">
                                     </div>
                                  </div>
+                                 <!-- Email -->
                                  <div role="listitem" class="freebirdFormviewerViewItemsItemItem freebirdFormviewerViewItemsTextTextItem" jsname="ibnC6b" jscontroller="rDGJeb"jsaction="sPvj8e:e4JwSe,vwKRrd;"data-required="true"data-item-id="798929867">
-                                    <div class="freebirdFormviewerViewItemsItemItemHeader">
-                                       <div class="freebirdFormviewerViewItemsItemItemTitleContainer">
-                                          <div class="freebirdFormviewerViewItemsItemItemTitle" dir="auto"role="heading" aria-level="2" aria-describedby="i.desc.798929867"> <span class="freebirdFormviewerViewItemsItemRequiredAsterisk" aria-hidden="true">* Required</span>
-                                          </div>
-                                          <div class="freebirdFormviewerViewItemsItemItemHelpText" id="i.desc.798929867" dir="auto">
-                                          </div>
-                                       </div>
-                                    </div>
                                     <div class="freebirdFormviewerViewItemsTextItemWrapper">
                                        <div class="quantumWizTextinputPaperinputEl freebirdFormviewerViewItemsTextShortText freebirdThemedInput" jscontroller="pxq3x" jsaction="clickonly:KjsqPd; focus:Jt1EX; blur:fpfTEe; input:Lg5SV;" jsshadow jsname="W85ice">
                                           <div class="quantumWizTextinputPaperinputMainContent exportContent">
                                              <div class="quantumWizTextinputPaperinputContentArea">
                                              <div class="quantumWizTextinputPaperinputInputArea">
-                                                <input type="text" class="quantumWizTextinputPaperinputInput exportInput" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-label="Email" aria-describedby="i.desc.798929867 i.err.798929867" name="entry.1083063576" value="" required dir="auto" data-initial-dir="auto" data-initial-value="" />
+                                                <input type="text" class="quantumWizTextinputPaperinputInput exportInput form-control input-field" placeholder="Email" required="" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-label="Email" aria-describedby="i.desc.798929867 i.err.798929867" name="entry.1083063576" value="" required dir="auto" data-initial-dir="auto" data-initial-value="" />
                                              </div>
                                              <div class="quantumWizTextinputPaperinputUnderline exportUnderline"></div>
                                              <div jsname="XmnwAc" class="quantumWizTextinputPaperinputFocusUnderline exportFocusUnderline"></div>
@@ -1296,20 +1282,14 @@
                                  <div jsname="XbIQze" class="freebirdFormviewerViewItemsItemErrorMessage" id="i.err.798929867" role="alert">
                                  </div>
                               </div>
+                              <!-- Subject -->
                               <div role="listitem" class="freebirdFormviewerViewItemsItemItem freebirdFormviewerViewItemsTextTextItem" jsname="ibnC6b" jscontroller="rDGJeb"jsaction="sPvj8e:e4JwSe,vwKRrd;"data-item-id="1194173847">
-                                 <div class="freebirdFormviewerViewItemsItemItemHeader">
-                                    <div class="freebirdFormviewerViewItemsItemItemTitleContainer">
-                                       <div class="freebirdFormviewerViewItemsItemItemTitle" dir="auto"role="heading" aria-level="2" aria-describedby="i.desc.1194173847">Subject</div>
-                                       <div class="freebirdFormviewerViewItemsItemItemHelpText" id="i.desc.1194173847" dir="auto"></div>
-                                    </div>
-                                 </div>
                                  <div class="freebirdFormviewerViewItemsTextItemWrapper">
                                     <div class="quantumWizTextinputPaperinputEl freebirdFormviewerViewItemsTextShortText freebirdThemedInput" jscontroller="pxq3x" jsaction="clickonly:KjsqPd; focus:Jt1EX; blur:fpfTEe; input:Lg5SV;" jsshadow jsname="W85ice">
                                        <div class="quantumWizTextinputPaperinputMainContent exportContent">
                                        <div class="quantumWizTextinputPaperinputContentArea">
                                           <div class="quantumWizTextinputPaperinputInputArea">
-                                             <input type="text" class="quantumWizTextinputPaperinputInput exportInput" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-label="Subject" aria-describedby="i.desc.1194173847 i.err.1194173847" name="entry.1724086186" value="" dir="auto" data-initial-dir="auto" data-initial-value="" />
-                                             <div jsname="LwH6nd" class="quantumWizTextinputPaperinputPlaceholder exportLabel" >Your answer</div>
+                                             <input type="text" class="quantumWizTextinputPaperinputInput exportInput form-control input-field" placeholder="Subject" required="" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-label="Subject" aria-describedby="i.desc.1194173847 i.err.1194173847" name="entry.1724086186" value="" dir="auto" data-initial-dir="auto" data-initial-value="" />
                                           </div>
                                           <div class="quantumWizTextinputPaperinputUnderline exportUnderline"></div>
                                           <div jsname="XmnwAc" class="quantumWizTextinputPaperinputFocusUnderline exportFocusUnderline"></div>
@@ -1324,17 +1304,12 @@
                               </div>
                               <div jsname="XbIQze" class="freebirdFormviewerViewItemsItemErrorMessage" id="i.err.1194173847" role="alert"></div>
                            </div>
+                           <!-- Enter Your Message -->
                            <div role="listitem" class="freebirdFormviewerViewItemsItemItem freebirdFormviewerViewItemsTextTextItem" jsname="ibnC6b" jscontroller="rDGJeb"jsaction="sPvj8e:e4JwSe,vwKRrd;"data-required="true"data-item-id="146127062">
-                              <div class="freebirdFormviewerViewItemsItemItemHeader">
-                              <div class="freebirdFormviewerViewItemsItemItemTitleContainer">
-                                 <div class="freebirdFormviewerViewItemsItemItemTitle" dir="auto"role="heading" aria-level="2" aria-describedby="i.desc.146127062">Enter Your Message <span class="freebirdFormviewerViewItemsItemRequiredAsterisk" aria-hidden="true">*</span>
-                                 </div>
-                                 <div class="freebirdFormviewerViewItemsItemItemHelpText" id="i.desc.146127062" dir="auto"></div>
-                              </div>
-                           </div>
                            <div class="quantumWizTextinputPapertextareaEl modeLight freebirdFormviewerViewItemsTextLongText freebirdThemedInput" jscontroller="pxq3x" jsaction="clickonly:KjsqPd; focus:Jt1EX; blur:fpfTEe; input:Lg5SV;" jsshadow jsname="W85ice">
-                              <div class="quantumWizTextinputPapertextareaMainContent exportContent"><div class="quantumWizTextinputPapertextareaPlaceholder exportLabel" jsname="LwH6nd">Your answer</div><div class="quantumWizTextinputPapertextareaContentArea exportContentArea">
-                              <textarea class="quantumWizTextinputPapertextareaInput exportTextarea" jsname="YPqjbf" data-rows="1" tabindex="0" aria-label="Enter Your Message" jscontroller="gZjhIf" jsaction="input:Lg5SV;ti6hGc:XMgOHc;rcuQ6b:WYd;" required name="entry.1810981429" dir="auto" data-initial-dir="auto" data-initial-value=""></textarea>
+                              <div class="quantumWizTextinputPapertextareaMainContent exportContent">
+                              <div class="quantumWizTextinputPapertextareaContentArea exportContentArea">
+                              <textarea class="quantumWizTextinputPapertextareaInput exportTextarea form-control input-field" placeholder="Enter Your Message" required="" jsname="YPqjbf" data-rows="1" tabindex="0" aria-label="Enter Your Message" jscontroller="gZjhIf" jsaction="input:Lg5SV;ti6hGc:XMgOHc;rcuQ6b:WYd;" required name="entry.1810981429" dir="auto" data-initial-dir="auto" data-initial-value=""></textarea>
                            </div>
                            <div class="quantumWizTextinputPapertextareaUnderline exportUnderline"></div>
                            <div jsname="XmnwAc" class="quantumWizTextinputPapertextareaFocusUnderline exportFocusUnderline"></div>
@@ -1348,9 +1323,11 @@
                <div class="freebirdFormviewerViewNavigationNavControls" jscontroller="lSvzH" jsaction="rcuQ6b:npT2md;JIbuQc:V3upec(GeGHKb),HiUbje(M2UYVd),NPBnCf(OCpkoe)" data-shuffle-seed="8291600030995961216">
                   <div class="freebirdFormviewerViewNavigationButtonsAndProgress">
                      <div class="freebirdFormviewerViewNavigationButtons">
-                        <div role="button" class="quantumWizButtonPaperbuttonEl quantumWizButtonPaperbuttonFlat quantumWizButtonPaperbuttonDark quantumWizButtonPaperbutton2El2 freebirdFormviewerViewNavigationSubmitButton" jscontroller="VXdfxd" jsaction="click:cOuCgd; mousedown:UX7yZ; mouseup:lbsD7e; mouseenter:tfO1Yc; mouseleave:JywGue;touchstart:p6p2H; touchmove:FwuNnf; touchend:yfqBxc(preventMouseEvents=true|preventDefault=true); touchcancel:JMtRjd;focus:AHmuwe; blur:O22p3e; contextmenu:mg9Pef;" jsshadow jsname="M2UYVd" aria-disabled="false" tabindex="0" >
+                        <div role="button" class="quantumWizButtonPaperbuttonEl quantumWizButtonPaperbuttonFlat quantumWizButtonPaperbuttonDark quantumWizButtonPaperbutton2El2 freebirdFormviewerViewNavigationSubmitButton btn" jscontroller="VXdfxd" jsaction="click:cOuCgd; mousedown:UX7yZ; mouseup:lbsD7e; mouseenter:tfO1Yc; mouseleave:JywGue;touchstart:p6p2H; touchmove:FwuNnf; touchend:yfqBxc(preventMouseEvents=true|preventDefault=true); touchcancel:JMtRjd;focus:AHmuwe; blur:O22p3e; contextmenu:mg9Pef;" jsshadow jsname="M2UYVd" aria-disabled="false" tabindex="0" >
                            <div class="quantumWizButtonPaperbuttonRipple exportInk" jsname="ksKsZd"></div>
                            <div class="quantumWizButtonPaperbuttonFocusOverlay exportOverlay"></div>
+                           <div class="btn-line"></div>
+                           <div class="btn-line btn-line-shift"></div>
                            <content class="quantumWizButtonPaperbuttonContent"><span class="quantumWizButtonPaperbuttonLabel exportLabel">Submit</span></content>
                         </div>
                      </div>
