one more for the messaging field and taking off height when on focus

--- a/index.html
+++ b/index.html
@@ -1309,7 +1309,7 @@
                            <div class="quantumWizTextinputPapertextareaEl modeLight freebirdFormviewerViewItemsTextLongText freebirdThemedInput" jscontroller="pxq3x" jsaction="clickonly:KjsqPd; focus:Jt1EX; blur:fpfTEe; input:Lg5SV;" jsshadow jsname="W85ice">
                               <div class="quantumWizTextinputPapertextareaMainContent exportContent">
                               <div class="quantumWizTextinputPapertextareaContentArea exportContentArea">
-                              <textarea class="quantumWizTextinputPapertextareaInput exportTextarea form-control input-field" placeholder="Enter Your Message" required="" jsname="YPqjbf" data-rows="1" tabindex="0" aria-label="Enter Your Message" jscontroller="gZjhIf" jsaction="input:Lg5SV;ti6hGc:XMgOHc;rcuQ6b:WYd;" required name="entry.1810981429" dir="auto" data-initial-dir="auto" data-initial-value=""></textarea>
+                              <textarea class="quantumWizTextinputPapertextareaInput exportTextarea textarea-field form-control" placeholder="Enter Your Message" required="" jsname="YPqjbf" data-rows="1" tabindex="0" aria-label="Enter Your Message" jscontroller="gZjhIf" jsaction="input:Lg5SV;ti6hGc:XMgOHc;rcuQ6b:WYd;" required name="entry.1810981429" dir="auto" data-initial-dir="auto" data-initial-value=""></textarea>
                            </div>
                            <div class="quantumWizTextinputPapertextareaUnderline exportUnderline"></div>
                            <div jsname="XmnwAc" class="quantumWizTextinputPapertextareaFocusUnderline exportFocusUnderline"></div>
