idk if this will work but GOD I hope it does

--- a/index.html
+++ b/index.html
@@ -1228,118 +1228,20 @@
                      <!-- Contact results -->
                      <div id="contact_results"></div>
                      <!-- Form Starts -->
-                     <script type="text/javascript">var submitted=false;</script>
-                     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='https://docs.google.com/forms/d/e/1FAIpQLScKaxpL8j2afwmNRPy0cdCsL_1vKu1fejKu0P0cQy5WQ7rKVQ/formResponse';}"></iframe>
-                     <form action="https://docs.google.com/forms/d/e/1FAIpQLScKaxpL8j2afwmNRPy0cdCsL_1vKu1fejKu0P0cQy5WQ7rKVQ/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;" id="mG61Hd" class="form-group">
-                        <div class="freebirdFormviewerViewFormCard">
-                           <div class="freebirdFormviewerViewAccentBanner freebirdAccentBackground"></div>
-                           <div class="freebirdFormviewerViewFormContent ">
-                              <!-- Name -->
-                              <div class=freebirdFormviewerViewItemList role="list">
-                                 <div role="listitem" class="freebirdFormviewerViewItemsItemItem freebirdFormviewerViewItemsTextTextItem" jsname="ibnC6b" jscontroller="rDGJeb"jsaction="sPvj8e:e4JwSe,vwKRrd;"data-required="true"data-item-id="944702798">
-                                    <div class="freebirdFormviewerViewItemsTextItemWrapper">
-                                       <div class="quantumWizTextinputPaperinputEl freebirdFormviewerViewItemsTextShortText freebirdThemedInput" jscontroller="pxq3x" jsaction="clickonly:KjsqPd; focus:Jt1EX; blur:fpfTEe; input:Lg5SV;" jsshadow jsname="W85ice">
-                                          <div class="quantumWizTextinputPaperinputMainContent exportContent">
-                                             <div class="quantumWizTextinputPaperinputContentArea">
-                                                <div class="quantumWizTextinputPaperinputInputArea">
-                                                   <input type="text" class="quantumWizTextinputPaperinputInput exportInput exportInput form-control input-field" placeholder="Name" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-label="Name" aria-describedby="i.desc.944702798 i.err.944702798" name="entry.144511022" value="" required dir="auto" data-initial-dir="auto" data-initial-value="" />
-
-                                                </div>
-                                                <div class="quantumWizTextinputPaperinputUnderline exportUnderline"></div>
-                                                <div jsname="XmnwAc" class="quantumWizTextinputPaperinputFocusUnderline exportFocusUnderline">
-                                                </div>
-                                             </div>
-                                          </div>
-                                          <div class="quantumWizTextinputPaperinputCounterErrorHolder">
-                                             <div jsname="ty6ygf" class="quantumWizTextinputPaperinputHint exportHint"></div>
-                                          </div>
-                                       </div>
-                                    </div>
-                                    <div class="freebirdFormviewerViewItemsItemGradingBox freebirdFormviewerViewItemsItemFeedbackBox" jsname="R7fTud">
-                                    </div>
-                                    <div jsname="XbIQze" class="freebirdFormviewerViewItemsItemErrorMessage" id="i.err.944702798" role="alert">
-                                    </div>
-                                 </div>
-                                 <!-- Email -->
-                                 <div role="listitem" class="freebirdFormviewerViewItemsItemItem freebirdFormviewerViewItemsTextTextItem" jsname="ibnC6b" jscontroller="rDGJeb"jsaction="sPvj8e:e4JwSe,vwKRrd;"data-required="true"data-item-id="798929867">
-                                    <div class="freebirdFormviewerViewItemsTextItemWrapper">
-                                       <div class="quantumWizTextinputPaperinputEl freebirdFormviewerViewItemsTextShortText freebirdThemedInput" jscontroller="pxq3x" jsaction="clickonly:KjsqPd; focus:Jt1EX; blur:fpfTEe; input:Lg5SV;" jsshadow jsname="W85ice">
-                                          <div class="quantumWizTextinputPaperinputMainContent exportContent">
-                                             <div class="quantumWizTextinputPaperinputContentArea">
-                                             <div class="quantumWizTextinputPaperinputInputArea">
-                                                <input type="text" class="quantumWizTextinputPaperinputInput exportInput form-control input-field" placeholder="Email" required="" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-label="Email" aria-describedby="i.desc.798929867 i.err.798929867" name="entry.1083063576" value="" required dir="auto" data-initial-dir="auto" data-initial-value="" />
-                                             </div>
-                                             <div class="quantumWizTextinputPaperinputUnderline exportUnderline"></div>
-                                             <div jsname="XmnwAc" class="quantumWizTextinputPaperinputFocusUnderline exportFocusUnderline"></div>
-                                          </div>
-                                       </div>
-                                       <div class="quantumWizTextinputPaperinputCounterErrorHolder">
-                                          <div jsname="ty6ygf" class="quantumWizTextinputPaperinputHint exportHint"></div>
-                                       </div>
-                                    </div>
-                                 </div>
-                                 <div class="freebirdFormviewerViewItemsItemGradingBox freebirdFormviewerViewItemsItemFeedbackBox" jsname="R7fTud"></div>
-                                 <div jsname="XbIQze" class="freebirdFormviewerViewItemsItemErrorMessage" id="i.err.798929867" role="alert">
-                                 </div>
-                              </div>
-                              <!-- Subject -->
-                              <div role="listitem" class="freebirdFormviewerViewItemsItemItem freebirdFormviewerViewItemsTextTextItem" jsname="ibnC6b" jscontroller="rDGJeb"jsaction="sPvj8e:e4JwSe,vwKRrd;"data-item-id="1194173847">
-                                 <div class="freebirdFormviewerViewItemsTextItemWrapper">
-                                    <div class="quantumWizTextinputPaperinputEl freebirdFormviewerViewItemsTextShortText freebirdThemedInput" jscontroller="pxq3x" jsaction="clickonly:KjsqPd; focus:Jt1EX; blur:fpfTEe; input:Lg5SV;" jsshadow jsname="W85ice">
-                                       <div class="quantumWizTextinputPaperinputMainContent exportContent">
-                                       <div class="quantumWizTextinputPaperinputContentArea">
-                                          <div class="quantumWizTextinputPaperinputInputArea">
-                                             <input type="text" class="quantumWizTextinputPaperinputInput exportInput form-control input-field" placeholder="Subject" required="" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-label="Subject" aria-describedby="i.desc.1194173847 i.err.1194173847" name="entry.1724086186" value="" dir="auto" data-initial-dir="auto" data-initial-value="" />
-                                          </div>
-                                          <div class="quantumWizTextinputPaperinputUnderline exportUnderline"></div>
-                                          <div jsname="XmnwAc" class="quantumWizTextinputPaperinputFocusUnderline exportFocusUnderline"></div>
-                                       </div>
-                                    </div>
-                                    <div class="quantumWizTextinputPaperinputCounterErrorHolder">
-                                       <div jsname="ty6ygf" class="quantumWizTextinputPaperinputHint exportHint"></div>
-                                    </div>
-                                 </div>
-                              </div>
-                              <div class="freebirdFormviewerViewItemsItemGradingBox freebirdFormviewerViewItemsItemFeedbackBox" jsname="R7fTud">
-                              </div>
-                              <div jsname="XbIQze" class="freebirdFormviewerViewItemsItemErrorMessage" id="i.err.1194173847" role="alert"></div>
-                           </div>
-                           <!-- Enter Your Message -->
-                           <div role="listitem" class="freebirdFormviewerViewItemsItemItem freebirdFormviewerViewItemsTextTextItem" jsname="ibnC6b" jscontroller="rDGJeb"jsaction="sPvj8e:e4JwSe,vwKRrd;"data-required="true"data-item-id="146127062">
-                           <div class="quantumWizTextinputPapertextareaEl modeLight freebirdFormviewerViewItemsTextLongText freebirdThemedInput" jscontroller="pxq3x" jsaction="clickonly:KjsqPd; focus:Jt1EX; blur:fpfTEe; input:Lg5SV;" jsshadow jsname="W85ice">
-                              <div class="quantumWizTextinputPapertextareaMainContent exportContent">
-                              <div class="quantumWizTextinputPapertextareaContentArea exportContentArea">
-                              <textarea class="quantumWizTextinputPapertextareaInput exportTextarea textarea-field form-control" placeholder="Enter Your Message" required="" jsname="YPqjbf" data-rows="1" tabindex="0" aria-label="Enter Your Message" jscontroller="gZjhIf" jsaction="input:Lg5SV;ti6hGc:XMgOHc;rcuQ6b:WYd;" required name="entry.1810981429" dir="auto" data-initial-dir="auto" data-initial-value=""></textarea>
-                           </div>
-                           <div class="quantumWizTextinputPapertextareaUnderline exportUnderline"></div>
-                           <div jsname="XmnwAc" class="quantumWizTextinputPapertextareaFocusUnderline exportFocusUnderline"></div>
-                        </div>
-                        <div jsname="ty6ygf" class="quantumWizTextinputPapertextareaHint exportHint"></div>
-                     </div>
-                     <div class="freebirdFormviewerViewItemsItemGradingBox freebirdFormviewerViewItemsItemFeedbackBox" jsname="R7fTud"></div>
-                     <div jsname="XbIQze" class="freebirdFormviewerViewItemsItemErrorMessage" id="i.err.146127062" role="alert"></div>
-                  </div>
-               </div>
-               <div class="freebirdFormviewerViewNavigationNavControls" jscontroller="lSvzH" jsaction="rcuQ6b:npT2md;JIbuQc:V3upec(GeGHKb),HiUbje(M2UYVd),NPBnCf(OCpkoe)" data-shuffle-seed="8291600030995961216">
-                  <div class="freebirdFormviewerViewNavigationButtonsAndProgress">
-                     <div class="freebirdFormviewerViewNavigationButtons">
-                        <div role="button" class="quantumWizButtonPaperbuttonEl quantumWizButtonPaperbuttonFlat quantumWizButtonPaperbuttonDark quantumWizButtonPaperbutton2El2 freebirdFormviewerViewNavigationSubmitButton btn" jscontroller="VXdfxd" jsaction="click:cOuCgd; mousedown:UX7yZ; mouseup:lbsD7e; mouseenter:tfO1Yc; mouseleave:JywGue;touchstart:p6p2H; touchmove:FwuNnf; touchend:yfqBxc(preventMouseEvents=true|preventDefault=true); touchcancel:JMtRjd;focus:AHmuwe; blur:O22p3e; contextmenu:mg9Pef;" jsshadow jsname="M2UYVd" aria-disabled="false" tabindex="0" >
-                           <div class="quantumWizButtonPaperbuttonRipple exportInk" jsname="ksKsZd"></div>
-                           <div class="quantumWizButtonPaperbuttonFocusOverlay exportOverlay"></div>
+                     <form class="form-group" action="https://formspree.io/barrysbuns@gmail.com" method="POST">
+                        <input type="text" name="name" class="form-control input-field" placeholder="Name" required="">                    
+                        <input type="email" name="email" class="form-control input-field" placeholder="Email" required="">           
+                        <input type="text" name="subject" class="form-control input-field" placeholder="Subject">                                          
+                        <textarea name="message" id="message" class="textarea-field form-control" rows="4" placeholder="Enter your message" required=""></textarea>
+                        <input type="text" name="_gotcha" style="display:none" />
+                        <!-- Button -->
+                        <button type="submit" value="send" class="btn">
                            <div class="btn-line"></div>
                            <div class="btn-line btn-line-shift"></div>
-                           <content class="quantumWizButtonPaperbuttonContent"><span class="quantumWizButtonPaperbuttonLabel exportLabel">Submit</span></content>
-                        </div>
-                     </div>
+                           Send Message
+                        </button>
+                     </form>
                   </div>
-               </div>
-                  <input type="hidden" name="fvv" value="1">
-                  <input type="hidden" name="draftResponse" value="[null,null,&quot;8291600030995961216&quot;]">
-                  <input type="hidden" name="pageHistory" value="0"><input type="hidden" name="fbzx" value="8291600030995961216">
-               </div>
-            </div>
-         </form>
-      </div>
                   <div class="text-left timetable res-margin box first-time">
                   <!-- Sign-->
                   <h5 class="align-center">Hours @ The Market</h5>
