--- a/index.html
+++ b/index.html
@@ -1172,34 +1172,33 @@
                <h3>Sign-up to receive our newsletter</h3>
             </div>
             <div class="col-lg-5 pull-right">
-               <!-- Form -->           
-               <div id="mc_embed_signup">
-                  <form action="//barrysbuns.us14.list-manage.com/subscribe/post?u=e1333bca0c4365d1505d42f1f&amp;id=d3fd8c326a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
-                     <div id="mc_embed_signup_scroll">
-                        <div class="mc-field-group">
+               <!-- Begin MailChimp Signup Form -->
+                  <div id="mc_embed_signup">
+                     <form action="//barrysbuns.us14.list-manage.com/subscribe/post?u=e1333bca0c4365d1505d42f1f&amp;id=d3fd8c326a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">
+                         <div class="mc-field-group">
                            <div class="input-group">
-                              <input class="form-control input-lg required email" type="email" value="" name="EMAIL" placeholder="Your email here" id="mce-EMAIL" required>
-                              <div class="input-group-btn">
-                                 <div class="btn" id="mc-embedded-subscribe">
-                                    <div class="btn-line"></div>
-                                    <div class="btn-line btn-line-shift"></div>
-                                    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-                                 </div>
-                              </div>
-                           </div>
-                           <!-- Subscription results -->
+                           <input class="form-control input-lg required email" type="email" name="EMAIL" class="form-control form-control__input user-signup__email" pattern="/^[a-zA-Z0-9+-_]+(\.[_a-zA-Z0-9+]+)*@[a-zA-Z0-9+-_]+(\.[a-zA-Z0-9+-_]+)*(\.[a-zA-Z]+)$/" placeholder="Email" aria-required="true" required="required">
+                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_e1333bca0c4365d1505d42f1f_d3fd8c326a" tabindex="-1" value=""></div>
+                            <div class="input-group-btn">
+                               <div class="btn" id="mc-embedded-subscribe">
+                                  <div class="btn-line"></div>
+                                  <div class="btn-line btn-line-shift"></div>
+                                  <button type="submit" class="btn-default submit user-signup__submit button" id="mc-embedded-subscribe">Submit</button>
+                               </div>
+                            </div>
+                         </div>
+                         <!-- Subscription results -->
                            <div id="mce-responses" class="mailchimp">
                               <div class="alert alert-danger response" id="mce-error-response"></div>
                               <div class="alert alert-success response" id="mce-success-response"></div>
                            </div>
-                        </div>
-                        <!-- /mc-fiel-group -->                         
-                     </div>
-                     <!-- /mc_embed_signup_scroll -->
-                  </form>
-                  <!-- /form ends -->
-               </div>
-               <!-- /mc_embed_signup -->        
+                         </div>
+                       </div>
+                     </form>
+                  </div>
+                  <!--End mc_embed_signup-->       
             </div>
             <!-- /col-ms-5 -->
          </div>
