changing some styling for the subscription form

--- a/index.html
+++ b/index.html
@@ -1181,11 +1181,11 @@
                            <input class="form-control input-lg required email" type="email" name="EMAIL" class="form-control form-control__input user-signup__email" pattern="/^[a-zA-Z0-9+-_]+(\.[_a-zA-Z0-9+]+)*@[a-zA-Z0-9+-_]+(\.[a-zA-Z0-9+-_]+)*(\.[a-zA-Z]+)$/" placeholder="Email" aria-required="true" required="required">
                             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_e1333bca0c4365d1505d42f1f_d3fd8c326a" tabindex="-1" value=""></div>
-                            <div class="input-group-btn">
+                            <div class="input-group-btn subscription-btn">
                                <div class="btn" id="mc-embedded-subscribe">
                                   <div class="btn-line"></div>
                                   <div class="btn-line btn-line-shift"></div>
-                                  <button type="submit" class="btn-default submit user-signup__submit button" id="mc-embedded-subscribe">Submit</button>
+                                  <button type="submit" value="send" class="submit user-signup__submit button btn" id="mc-embedded-subscribe">Submit</button>
                                </div>
                             </div>
                          </div>
