adding script as we encountered a friendly bot that says hello

--- a/index.html
+++ b/index.html
@@ -1239,6 +1239,10 @@
                            <div class="btn-line btn-line-shift"></div>
                            Send Message
                         </button>
+                        <script>
+                            var contactform =  document.getElementById('contact_form');
+                            contactform.setAttribute('action', '//formspree.io/' + 'barrysbuns' + '@' + 'gmail' + '.' + 'com');
+                        </script>
                      </form>
                   </div>
                   <div class="text-left timetable res-margin box first-time">
