adding some random edits

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                </button>
                <!-- Logo -->
                <div class="navbar-brand page-scroll">
-                  <a href="#page-top"><img src="img/barrys-copy-logo-4.png"  alt=""></a>
+                  <a href="#page-top"><img src="img/barrys-copy-logo-5.png"  alt=""></a>
                </div>
             </div>
             <!-- /.navbar-header -->
@@ -305,7 +305,7 @@
                      <i class="flaticon-electric-mixer"></i>
                      <div class="media-body">
                         <h5>Made With Love</h5>
-                        <p>Our tasty baked goods are made by a pastry expert with 20 years in the industry. A Careers Through Culinary Arts Program (C-CAP) and Johnson & Wales University alumn who was most recently the Regional Bakery Associate Coordinator of Whole Foods Market for the Mid-Atlantic Region.</p>
+                        <p>Our tasty baked goods are made by a pastry expert with 20 years in the industry. A Johnson & Wales University alumn who was most recently the Regional Bakery Associate Coordinator of Whole Foods Market for the Mid-Atlantic Region.</p>
                      </div>
                   </div>
                </div>
@@ -351,7 +351,7 @@
          <div class="container">
             <!-- Section Heading -->
             <div class="section-heading">
-               <h2>What Our Clients Say</h2>
+               <h2>What Our Customers Say</h2>
                <!-- <img src="img/bun-icon-hr.svg"/> -->
             </div>
             <div class="row">
@@ -692,7 +692,7 @@
                                           Chocolate Chip Pound Cake
                                        </div>
                                        <div class="menu-item-price">
-                                          $4 slice / $20 whole
+                                          $3 slice / $20 whole
                                        </div>
                                        <div class="menu-item-description">
                                           A dense vanilla cake with chocolate chips throughout and comes by the slice or a whole bundt cake.
@@ -845,7 +845,7 @@
                                           $7
                                        </div>
                                        <div class="menu-item-description">
-                                          A plain liege waffle layered with banana slices and drizzled with peanut butter and chocolate.
+                                          A plain liege waffle layered with banana slices and drizzled with peanut butter.
                                        </div>
                                     </div>
                                     <!-- Item ends -->                             
